<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_calculate_your"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_age"
        android:background="@color/ageTextBackgroundColor"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_in_days"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnSelectDateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:text="@string/text_select_date"
        android:textColor="@color/custom_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white" />

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_selected_date"
        android:textColor="@color/custom_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvSelectedDateInDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textColor="@color/textColor"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_age_in_days"
        android:textColor="#B7B7B7"
        android:textSize="18sp" />

</androidx.appcompat.widget.LinearLayoutCompat>